2008-02-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Add binding for delete
	  command, so the delete action will work even if the the delete command
	  is bound to the delete key.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: fixed little comment issue.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixing file changed bug
	  (with new files).

2008-02-19  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.SearchWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.GotoLineNumberWidget.cs,
	  gtk-gui/gui.stetic: Use buttons without relief for the search/replace
	  widgets.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed toggle code comment
	  bug.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed comment/uncomment
	  code.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed Bug 362889 - Error
	  underlining not properly redrawn.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed some gdk criticals
	  caused by an too early OptionsChanged event.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs,
	  MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: Worked on selection.

2008-02-18  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: Small workaround to be able to
	  build in mono 1.2.4 (mono 1.2.4 ignores usings in anon delegates).

2008-02-18  Mike Krüger <mkrueger@novell.com> 
